sites/all/themes/ec_default/css/less/style.less
/* $Id: style.css,v 1.53 2011/01/04 06:23:29 dries Exp $ */

.f_right { float: right; }
.f_left { float: left; }
.c_right { clear: right; }
.c_left { clear: left; }
.t_upper { text-transform: uppercase; }
.t_right {text-align: right; }
.t_left {text-align: left; }
.clickable { cursor: pointer; }


/* ---------- Overall Specifications ---------- */

body {
  word-wrap: break-word;
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
}
body,
body.overlay,
li,
label { color: @text_color; }

del {
  text-decoration: line-through;
}
img {
  outline: 0;
}
code,
pre,
kbd,
samp,
var {
  padding: 0 0.4em;
  font-size: 0.77em;
  font-family: Menlo, Consolas, "Andale Mono", "Lucida Console", "Nimbus Mono L", "DejaVu Sans Mono", monospace, "Courier New";
}
code {
  background-color: #f2f2f2;
  background-color: rgba(40, 40, 0, 0.06);
}
pre code,
pre kbd,
pre samp,
pre var,
kbd kbd,
kbd samp,
code var {
  font-size: 100%;
  background-color: transparent;
}
pre code,
pre samp,
pre var {
  padding: 0;
}
.description code {
  font-size: 1em;
}
kbd {
  background-color: #f2f2f2;
  border: 1px outset #575757;
  margin: 0 3px;
  color: #666;
  display: inline-block;
  padding: 0 6px;
  .border-radius;
}
pre {
  background-color: #f2f2f2;
  background-color: rgba(40, 40, 0, 0.06);
  margin: 10px 0;
  overflow: hidden;
  padding: 15px;
  white-space: pre-wrap;
}
p {
  font-size: 100%;
}

/* ------------------ Reset Styles ------------------ */

caption {
  text-align: left; /* LTR */
  font-weight: normal;
}
a.feed-icon {
  display: inline-block;
  padding: 15px 0 0 0;
}

/* ------------------ Heading Styles ------------------ */
h1 {color: @h1_color; }
h2 {color: @h2_color; }
h3 {color: @h3_color; }
h4 {color: @h4_color; }
h5 {color: @h5_color; }
h6 {color: @h6_color; }

/* ------------------ Links Styles ------------------ */
a {
  color: @link_color;
  &:hover { color: @link_hover_color; }
  &:focus { color: @link_hover_color; }
  &:active { color: @link_active_color; }  
  &:visited { color: @link_color; }
}

/* ------------------ Table Styles ------------------ */
table {
  tr {
    &.odd { background-color: transparent; }
    &.even  { background-color: transparent; }
    td {
      &.active { background-color: transparent; }
    }
  }
}

/* ------------------ List Styles ------------------ */

.contextual-links-wrapper {
  font-size: small !important;
}
.contextual-links-wrapper a {
  text-shadow: 0 0 0 !important;
}
ul.menu li {
  margin: 0;
}
.region-content ul,
.region-content ol {
  margin: 1em 0;
  padding: 0 0 0.25em 2.5em; /* LTR */
}
.item-list ul li {
  margin: 0;
  padding: 0.2em 0.5em 0 0; /* LTR */
}
ul.tips {
  padding: 0 0 0 1.25em; /* LTR */
}
a.context-block-region {
  display: none !important;
}
ul {
  .secondary {
    border-color: darken(@body_color,15%);
    li { border-color: darken(@body_color,15%); }
  }
}

/* ------------------ Header ------------------ */
/*@font-face {
  font-family: ec_font;
  src: local(ec_font), url('../font/PFSquareSansPro-Regular.ttf') format('opentype');
}
#main_title {
  font-family: ec_font;
  color: #0065a2;
  text-transform: uppercase;
  font-size: 28px !important;
  position: absolute;
  z-index: 10;
  left: 245px;
  top: 65px;
  text-decoration: none;
}
#sub_title {
  font-family: ec_font;
  color: #fff;
  font-size: 21px !important;
  position: absolute;
  z-index: 10;
  left: 245px;
  top: 100px;
  text-decoration: none;
}*/

#skip-link {
  left: 50%;
  margin-left: -5.25em;
  margin-top: 0;
  position: absolute;
  width: auto;
  z-index: 50;
}
#skip-link a,
#skip-link a:link,
#skip-link a:visited {
  background: #444;
  background: rgba(0, 0, 0, 0.6);
  color: #fff;
  display: block;
  line-height: 1.7;
  padding: 1px 10px 2px 10px;
  text-decoration: none;
  .border-radius(0,0,10px,10px);
}
#skip-link a:hover,
#skip-link a:active,
#skip-link a:focus {
  outline: 0;
}

/* ------------------- Main ------------------- */

#main {
  margin-top: 20px;
  margin-bottom: 40px;
}

/* ----------------- Featured ----------------- */

#featured {
  text-align: center;
  font-size: 1.643em;
  font-weight: normal;
  line-height: 1.4;
  padding: 20px 0 45px;
  margin: 0;
  background: #f0f0f0;
  background: rgba(30, 50, 10, 0.08);
  border-bottom: 1px solid #e7e7e7;
  text-shadow: 1px 1px #fff;
}
#featured h2 {
  font-size: 1.174em;
  line-height: 1;
}
#featured p {
  margin: 0;
  padding: 0;
}

/* --------------- Highlighted ---------------- */

#highlighted {
  font-size: 120%;
}

/* ------------------- Help ------------------- */

.region-help {
  border: 1px solid #d3d7d9;
  padding: 0 1.5em;
  margin-bottom: 30px;
}

/* ----------------- Content ------------------ */

.layout-content .content {
  margin-top: 10px;
  clear: both;
}
.node .content {
  font-size: 1em;
}
.node-teaser .content {
  font-size: 1em;
}
.node-teaser h2 {
  margin-top: 0;
  padding-top: 0.5em;
  clear: both;
}
.node-teaser h2 a {
  color: #181818;
}
.node-teaser {
  margin-bottom: 30px;
  padding-bottom: 15px;
}
.node-sticky {
  background: #f9f9f9;
  background: rgba(0, 0, 0, 0.024);
  border: 1px solid #d3d7d9;
  padding: 0 15px 15px;
}
.node-full {
  background: none;
  border: none;
  padding: 0;
}
.node-teaser .content {
  clear: none;
  line-height: 1.6;
}
.meta {
  color: #999999;
  font-size: 0.9em;
  margin-bottom: -5px;
  .form-item {
    margin: 0;
  }
  &.group {
    float: right;
    clear: left;
  }
}
.submitted .user-picture img {
  float: left; /* LTR */
  height: 20px;
  margin: 1px 5px 0 0; /* LTR */
}
.field-type-taxonomy-term-reference {
  margin: 0;
}
.field-type-taxonomy-term-reference .field-label {
  font-weight: normal;
  margin: 0;
  padding-right: 5px; /* LTR */
}
.field-type-taxonomy-term-reference .field-label,
.field-type-taxonomy-term-reference ul.links {
  font-size: 1em;
}
.node-teaser .field-type-taxonomy-term-reference .field-label,
.node-teaser .field-type-taxonomy-term-reference ul.links {
  font-size: 1em;
}
.field-type-taxonomy-term-reference ul.links {
  padding: 0;
  margin: 0;
  list-style: none;
}
.field-type-taxonomy-term-reference ul.links li {
  float: left; /* LTR */
  padding: 0 1em 0 0; /* LTR */
  white-space: nowrap;
}
.link-wrapper {
  text-align: right;
  &.right {
    float: right;
    padding-top: 15px;
    width: 50%;
  }
}
.field-type-image img,
.user-picture img {
  margin: 0 0 1em;
}
ul.links {
  color: #68696b;
  font-size: 0.9em;
}
.node-unpublished {
  margin: -20px -15px 0;
  padding: 20px 15px 0;
}
.node-unpublished .comment-text .comment-arrow {
  border-left: 1px solid #fff4f4;
  border-right: 1px solid #fff4f4;
}

/* ---------------- grids  ----------------- */
.grid3 {
  table {
    width: 100%;
    td { 
      width: 33%; 
      padding: 10px 15px;
      vertical-align: top;
    }
    th { 
      width: 33%; 
      padding: 10px 15px;
      vertical-align: top;
    }
  }
}
.grid4 {
  table {
    width: 100%;
    td { 
      width: 25%; 
      padding: 10px 15px;
      vertical-align: top;
    }
    th { 
      width: 25%; 
      padding: 10px 15px;
      vertical-align: top;
    }
  }
}

/* -------------- Form Elements   ------------- */

fieldset,
.fieldset {
  border: 1px solid #cccccc;
  padding: 10px 13px;
  margin: 10px 0;
  .box-shadow(0 1px 5px rgba(0, 0, 0, 0.08) inset);
  .border-radius;
}

/* Contact Form */
.contact-form #edit-name {
  width: 75%;
}
.contact-form #edit-mail {
  width: 75%;
}
.contact-form #edit-subject {
  width: 75%;
}
.contact-form #edit-message {
  width: 76.3%;
}
.contact-form .resizable-textarea .grippie {
  width: 76%;
}

/* Disabled form elements */
input.form-button-disabled,
input.form-button-disabled:hover,
input.form-button-disabled:focus,
input.form-button-disabled:active,
.form-disabled input,
.form-disabled select,
.form-disabled textarea {
  background: #ededed;
  border-color: #bbb;
  color: #717171;
}
.form-disabled .grippie {
  background-color: #ededed;
  border-color: #bbb;
}
.form-disabled label {
  color: #717171;
}

/* Animated throbber */
html.js input.form-autocomplete {
  background-position: 100% 4px; /* LTR */
}
html.js input.throbbing {
  background-position: 100% -16px; /* LTR */
}

.no_label .field-label,
.no_label label {
  display: none;
}
.no_label .field {
  padding-bottom: 0;
}

/* -------------- Other Overrides ------------- */

div.password-suggestions {
  border: 0;
}
.ui-widget-overlay {
  background: #222222;
  opacity: 0.7;
}
div.vertical-tabs .vertical-tabs-panes fieldset.vertical-tabs-pane {
  padding: 1em;
}
#forum tr td.forum {
  padding-left: 35px;
}
#forum .name {
  font-size: 1em;
}
#forum .description {
  font-size: 1em;
}

/* -------------- Shortcut Links -------------- */

.shortcut-wrapper {
  margin: 2.2em 0 1.1em 0; /* Same as usual h1#page-title margin. */
}
.shortcut-wrapper h1#page-title {
  float: left; /* LTR */
  margin: 0;
}
div.add-or-remove-shortcuts {
  padding-top: 0.9em;
}
.overlay div.add-or-remove-shortcuts {
  padding-top: 0.8em;
}

/* ---------- Admin-specific Theming ---------- */

.page-admin #content img {
  margin-right: 15px; /* LTR */
}
.page-admin #content .simpletest-image img {
  margin: 0;
}
.page-admin-structure-block-demo .block-region {
  background: #ffff66;
  border: 1px dotted #9f9e00;
  color: #000;
  font: 90% "Lucida Grande", "Lucida Sans Unicode", sans-serif;
  margin: 5px;
  padding: 5px;
  text-align: center;
  text-shadow: none;
}
.page-admin-structure-block-demo #featured .block-region {
  font-size: 0.55em;
}
.page-admin-structure-block-demo #header .block-region {
  width: 500px;
}
.page-admin #admin-dblog img {
  margin: 0 5px;
}
/* Fix spacing when Seven is used in the overlay. */
#system-theme-settings fieldset {
  padding: 0;
}
#system-theme-settings fieldset .fieldset-legend {
  margin-top: 0;
}
/* Configuration. */
div.admin .right,
div.admin .left {
  width: 49%;
  margin: 0;
}
div.admin-panel {
  background: #fbfbfb;
  border: 1px solid #ccc;
  margin: 10px 0;
  padding: 0 5px 5px;
}
div.admin-panel h3 {
  margin: 16px 7px;
}
div.admin-panel dt {
  border-top: 1px solid #ccc;
  padding: 7px 0 0;
}
div.admin-panel dd {
  margin: 0 0 10px;
}
div.admin-panel .description {
  margin: 0 0 14px 7px;
}

/* ---------- Overlay layout styles ----------- */

.overlay #main,
.overlay #content {
  width: auto;
  float: none;
}
.overlay #page {
  padding: 0 2em;
}
.overlay #skip-link,
.overlay .region-page-top,
.overlay #header,
.overlay #page-title,
.overlay #featured,
.overlay #sidebar-first,
.overlay #triptych-wrapper,
.overlay #footer-wrapper {
  display: none;
}
.overlay-processed .field-type-image {
  display: block;
  float: none;
}
.overlay #messages {
  width: auto;
}

/* ---------- Footer ----------- */
.layout-footer-wrapper {
  margin-top: 15px;
  padding: 15px;
  /*color: #fff;
  .box-shadow(0 1px 100px rgba(51, 102, 153, 0.8) inset);
  background-color: #7ad;
  text-shadow: -1px 0 0 rgba(0, 0, 0, 0.1), 
         1px 0 0 rgba(0, 0, 0, 0.1),
         0 -1px 0 rgba(0, 0, 0, 0.1),
         0 1px 0 rgba(0, 0, 0, 0.1);
  //#gradient .horizontal(#369, #f1f9fe);
  #gradient .vertical(#7AD, #369);
  #gradient .radial(#69c, #369);
  //#gradient .vertical-three-colors(#369, #58B, 60%, #f1f9fe);
  //#gradient .directional(#369, #f1f9fe, 30deg);
  //#gradient .striped(#369); 
  a,
  a:link,
  a:visited {
    color: #fff;
  }*/
}

